# volume-segmantics

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  UVInstallation.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: docker.yml  docs.yml  release.yml  sphinx.yml  tests.yml
docs/: .readthedocs.yaml  Advanced Usage and Functionality; RFI-developed Workflow and Utility Documentation.md  ReadMe_VolSeg2.5-Updated.md  Volume-Segmantics Tutorial - Tissue Segmentation and Evaluation.md  optuna.md  requirements.txt  tutorials.md
docs/Doc_Scripts/: BatchModelPredict2d.py  (+4 more)
tests/: conftest.py  test_api_predict.py  test_atomic_io.py  test_augmentations.py  test_augmentations_monai.py  test_axis_alignment.py  test_base_data_manager.py  test_base_data_utils.py  test_checkpoint_loading.py  test_cli_smoke.py  test_dataloaders.py  test_datasets.py  test_datasets_monai.py  test_dino_encoder.py  test_early_stopping.py  test_entry_point_imports.py  test_first_conv_adaptation.py  test_instance_assembly_protocol.py  test_io_roundtrip.py  test_lightning_2d.py  test_loss_functions_extra.py  test_loss_ignore_and_grad.py  test_loss_metric_numerics.py  test_loss_registry_unify.py  test_loss_schedule.py  test_model_2d.py  test_mrc_utils.py  test_optuna_optimizer.py  test_per_axis_producers.py  test_pipeline_dataset.py  test_pipeline_heads.py  test_pipeline_loader.py  test_pipeline_loss.py  test_pipeline_multitask_unet.py  test_pipeline_registry.py  test_pipeline_ssl.py  test_pipeline_targets.py  test_predict_with_instance_assembly.py  test_prediction_uncertainty.py  test_prediction_writer.py  (+10 more)
training_data/: download_platelet_em.py  prepare_platelet_instance.py  sample_123761_MULTICLASS_LABEL.tiff  sample_123761_VESSEL_LABELS.tiff  sample_123761_VILLI_LABELS.tiff
volseg-settings/: 2d_model_predict_settings.yaml  2d_model_train_settings.yaml  optuna_config.yaml
volume_segmantics/: api.py
(+140 files in other folders)
