[tool.poetry]
name = "volume-segmantics"
version = "0.3.3"
description = "A toolkit for semantic segmentation of volumetric data using pyTorch deep learning models"
authors = ["Oliver King, Avery Pennington <avery.pennington@rfi.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rosalindfranklininstitute/volume-segmantics"
keywords = ["segmentation", "deep-learning", "volumetric", "3d"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.poetry.dependencies]
python = ">=3.10"
albumentations = "^1.1.0"
h5py = "^3.0.0"
numpy = "^1.18.0"
matplotlib = "^3.3.0"
torch = ">=2.5.1,<2.11.0"
monai = ">=1.3.0"
segmentation-models-pytorch = "*"
termplotlib = "^0.3.6"
imagecodecs = "> 2022.2.22"
torchseg = "*"
imageio = "*"
scikit-image = "*"
torchmetrics = "*"
termcolor = "*"
sparse = "*"
mrcfile = ">=1.5"



[tool.poetry.dev-dependencies]
opencv-python-headless = "4.8.0.74"
black = ">=22.1.0"
pdoc = ">=10"
pylint = ">=2.4.0"
pytest = ">=6"
pytest-cov = "*"
zarr = "*"


[tool.pytest.ini_options]
addopts = "-v --cov=volume_segmantics --cov-report term-missing"
testpaths = [
    "tests",
]
markers = [
    "gpu: marks tests that require a GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that are particularly slow (deselect with '-m \"not slow\"')"
    ]
filterwarnings = [
    "ignore:.*Downcasting*:UserWarning",
    "ignore:.*removed in Pillow 10*:DeprecationWarning"
    ]

[tool.poetry.scripts]
model-train-2d = 'volume_segmantics.scripts.train_2d_model:main'
model-predict-2d = 'volume_segmantics.scripts.predict_2d_model:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


